b=260591, bookmarks.html not created if it doesn't exist in profile, bookmarks fail to save, r+a=ben